MODIFIED / changed Prefetch

--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,4 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/macos,zsh,django,python,visualstudiocode,linux,vim
 
 my_settings.py
+csv/
